
INCLUDES = -I$(top_srcdir)

AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libflash.a

libflash_a_SOURCES = \
	adpcm.cc	\
	adpcm.h		\
	bitmap.cc	\
	bitmap.h	\
	button.cc	\
	button.h	\
	character.cc	\
	character.h	\
	cxform.cc	\
	cxform.h	\
	displaylist.cc	\
	displaylist.h	\
	flash.cc	\
	font.cc		\
	font.h		\
	graphic.cc	\
	graphic.h	\
	graphic16.cc	\
	graphic16.h	\
	graphic24.cc	\
	graphic24.h	\
	graphic32.cc	\
	graphic32.h	\
	matrix.cc	\
	matrix.h	\
	movie.cc	\
	movie.h		\
	program.cc	\
	program.h	\
	rect.h		\
	script.cc	\
	script.h	\
	shape.cc	\
	shape.h		\
	sound.cc	\
	sound.h		\
	sprite.cc	\
	sprite.h	\
	sqrt.cc		\
	swf.h		\
	text.cc		\
	text.h
