
INCLUDES = -I$(top_srcdir)

AM_CFLAGS = $(CFLAGS)

AUTOMAKE_OPTIONS = foreign

noinst_LTLIBRARIES = libflash.la

libflash_la_SOURCES = \
	adpcm.cc	\
	bitmap.cc	\
	button.cc	\
	character.cc	\
	cxform.cc	\
	displaylist.cc	\
	flash.cc	\
	font.cc		\
	graphic.cc	\
	graphic16.cc	\
	graphic24.cc	\
	graphic32.cc	\
	matrix.cc	\
	movie.cc	\
	program.cc	\
	rect.h		\
	script.cc	\
	shape.cc	\
	sprite.cc	\
	sqrt.cc		\
	text.cc

noinst_HEADERS = adpcm.h bitmap.h button.h character.h cxform.h displaylist.h \
	flash.h font.h graphic.h matrix.h movie.h program.h rect.h script.h \
	shape.h sprite.h swf.h text.h graphic16.h graphic24.h graphic32.h
