INCLUDES = -I$(top_srcdir)

AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libportaudio.a

libportaudio_a_SOURCES = \
	pa_allocation.c \
	pa_converters.c \
	pa_cpuload.c \
	pa_dither.c \
	pa_front.c \
	pa_linux_alsa.c \
	pa_process.c \
	pa_skeleton.c \
	pa_stream.c \
	pa_trace.c \
	pa_unix_oss.c \
	pa_unix/pa_unix_hostapis.c \
	pa_unix/pa_unix_util.c

# pa_jack.c 
# pa_mac_core.c
# pa_mac_hostapis.c 
