INCLUDES = -I$(top_srcdir)/src/include

AUTOMAKE_OPTIONS = foreign

noinst_LTLIBRARIES = libslw.la

libslw_la_SOURCES = slw_console.cpp slw.cpp \
	            slw_popup.cpp abs_text_console.cpp slw_text.cpp \
                    slw_log.cpp slw_prompt.cpp

#	$(top_srcdir)/linklist.o $(top_srcdir)/jutils.o


