INCLUDES = -I$(top_srcdir)

AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libtheora.a

libtheora_a_SOURCES = \
	blockmap.c \
	comment.c \
	dct.c \
	dct_decode.c \
	decode.c \
	frarray.c \
	frinit.c \
	huffman.c \
	idct.c \
	mcomp.c \
	misc_common.c \
	pb.c \
	pp.c \
	quant.c \
	reconstruct.c \
	scan.c \
	toplevel.c \
	cpu.c \
	dsp.c \
	i386/dsp_mmx.c \
	i386/dsp_mmxext.c \
	i386/recon_mmx.c \
	i386/fdct_mmx.c \
	dct_encode.c encode.c encoder_toplevel.c


